# backend/app/Enums/ModeloCartaoStatus.php
@@ -1,0 +1,10 @@
+<?php
+
+namespace App\Enums;
+
+enum ModeloCartaoStatus: string
+{
+    case DRAFT = 'rascunho';
+    case APPROVED = 'homologado';
+    case INACTIVE = 'inativo';
+}
